neu Endpunkte für Listeneinträge
